--- a/Updated Version/View/Login.fxml
+++ b/Updated Version/View/Login.fxml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
@@ -17,17 +16,17 @@
    <children>
       <ImageView fitHeight="379.0" fitWidth="636.0" layoutX="-12.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../VS%20Code%20Projects/Test2/src/image/gradient.jpg" />
+            <Image url="@../image/gradient.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="379.0" fitWidth="559.0" layoutX="9.0" layoutY="29.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="379.0" fitWidth="559.0" layoutX="6.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../VS%20Code%20Projects/Test2/src/image/gradient.jpg" />
+            <Image url="@../image/gradient.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="170.0" fitWidth="170.0" layoutX="17.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="170.0" fitWidth="170.0" layoutX="13.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../VS%20Code%20Projects/Test2/src/image/logo.png" />
+            <Image url="@../image/logo.png" />
          </image>
       </ImageView>
       <Circle fill="#f8c8dc" layoutX="517.0" layoutY="314.0" opacity="0.4" radius="18.0" stroke="#e37383" strokeType="INSIDE" />
@@ -44,44 +43,44 @@
       <Circle fill="#f8c8dc" layoutX="126.0" layoutY="342.0" opacity="0.4" radius="20.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="32.0" layoutY="388.0" opacity="0.4" radius="20.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="90.0" layoutY="362.0" opacity="0.4" radius="26.0" stroke="#e37383" strokeType="INSIDE" />
-      <ImageView fitHeight="119.0" fitWidth="100.0" layoutX="417.0" layoutY="154.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="119.0" fitWidth="100.0" layoutX="417.0" layoutY="145.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../VS%20Code%20Projects/Test2/src/image/anya.png" />
+            <Image url="@../image/anya.png" />
          </image>
       </ImageView>
-      <Label layoutX="62.0" layoutY="230.0" text="Username: " textFill="#ab3363">
+      <Label layoutX="72.0" layoutY="223.0" text="Username: " textFill="#ab3363">
          <font>
             <Font name="Arial Rounded MT Bold" size="23.0" />
          </font>
       </Label>
-      <Label layoutX="64.0" layoutY="267.0" text="Password: " textFill="#ab3363">
+      <Label layoutX="74.0" layoutY="254.0" text="Password: " textFill="#ab3363">
          <font>
             <Font name="Arial Rounded MT Bold" size="23.0" />
          </font>
       </Label>
-      <TextField fx:id="mytextfield" layoutX="198.0" layoutY="230.0" prefHeight="26.0" prefWidth="317.0" promptText="Enter your username here..." />
-      <PasswordField fx:id="mypasswordfield" layoutX="198.0" layoutY="267.0" prefHeight="26.0" prefWidth="317.0" promptText="Enter your password here..." />
-      <Button fx:id="mybutton" layoutX="318.0" layoutY="307.0" mnemonicParsing="false" onAction="#login" text="LOGIN" textFill="#ab3363">
+      <TextField fx:id="mytextfield" layoutX="198.0" layoutY="223.0" prefHeight="26.0" prefWidth="317.0" promptText="Enter your username here..." />
+      <PasswordField fx:id="mypasswordfield" layoutX="198.0" layoutY="254.0" prefHeight="26.0" prefWidth="317.0" promptText="Enter your password here..." />
+      <Button fx:id="mybutton" layoutX="318.0" layoutY="300.0" mnemonicParsing="false" onAction="#login" text="LOGIN" textFill="#ab3363">
          <font>
             <Font name="Agency FB" size="24.0" />
          </font>
       </Button>
-      <Label fx:id="mywarninglabel" layoutX="87.0" layoutY="358.0" text="Username and Password does not match!" textFill="RED" visible="false">
+      <Button fx:id="mybutton1" layoutX="157.0" layoutY="300.0" mnemonicParsing="false" onAction="#forgotpassword" prefHeight="44.0" prefWidth="135.0" style="-fx-background-color: transparent;" text="Forgot Password?" textFill="#ab3363" underline="true">
+         <font>
+            <Font name="Agency FB" size="19.0" />
+         </font>
+      </Button>
+      <Label fx:id="mywarninglabel" layoutX="98.0" layoutY="358.0" text="Username and Password does not match!" textFill="RED" visible="false">
          <font>
             <Font name="OCR A Extended" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="78.0" layoutY="169.0" prefHeight="52.0" prefWidth="293.0" text="Please sign in to order" textFill="#ab3363">
+      <Label layoutX="78.0" layoutY="159.0" prefHeight="52.0" prefWidth="293.0" text="Please sign in to order" textFill="#ab3363">
          <font>
             <Font name="Arial Rounded MT Bold" size="27.0" />
          </font>
       </Label>
-      <CheckBox layoutX="170.0" layoutY="322.0" mnemonicParsing="false" text="Keep me signed in" textFill="#4a4040">
-         <font>
-            <Font name="MS Reference Sans Serif" size="12.0" />
-         </font>
-      </CheckBox>
-      <Label layoutX="175.0" layoutY="59.0" text="Kuromi's Coffee" textFill="#6b0829">
+      <Label layoutX="175.0" layoutY="51.0" text="Kuromi's Coffee" textFill="#6b0829">
          <font>
             <Font name="OCR A Extended" size="40.0" />
          </font>
@@ -99,7 +98,7 @@
       <Line endX="129.0" endY="-38.0" layoutX="441.0" layoutY="38.0" startX="112.5" startY="-19.9644775390625" stroke="#7c5454" strokeWidth="5.0" />
       <Line endX="-47.0" endY="44.0" layoutX="63.0" layoutY="354.0" startX="-71.313720703125" startY="66.17156982421875" stroke="#7c5454" strokeWidth="5.0" />
       <Line endX="-32.8492431640625" endY="35.29290771484375" layoutX="603.0" layoutY="380.0" startX="-50.0" startY="17.0" stroke="#7c5454" strokeWidth="5.0" />
-      <Label layoutX="298.0" layoutY="103.0" text="Shop" textFill="#6b0829">
+      <Label layoutX="299.0" layoutY="95.0" text="Shop" textFill="#6b0829">
          <font>
             <Font name="OCR A Extended" size="40.0" />
          </font>
