--- a/Updated Version/View/ForgotPassword.fxml
+++ b/Updated Version/View/ForgotPassword.fxml
@@ -11,21 +11,21 @@
 <?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="408.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ForgotPassword">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="408.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.ForgotPassword">
    <children>
-      <ImageView fitHeight="379.0" fitWidth="636.0" layoutX="-12.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="379.0" fitWidth="596.0" layoutX="4.0" layoutY="-4.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../VS%20Code%20Projects/Test2/src/image/gradient.jpg" />
+            <Image url="@../image/gradient.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="424.0" fitWidth="594.0" layoutX="-2.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="379.0" fitWidth="596.0" layoutX="4.0" layoutY="32.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../../Downloads/d641e55272fbc37145efaa58d9b0b613.jpeg" />
+            <Image url="@../image/gradient.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="170.0" fitWidth="170.0" layoutX="17.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="168.0" fitWidth="172.0" layoutX="18.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../VS%20Code%20Projects/Test2/src/image/logo.png" />
+            <Image url="@../image/logo.png" />
          </image>
       </ImageView>
       <Circle fill="#f8c8dc" layoutX="517.0" layoutY="314.0" opacity="0.4" radius="18.0" stroke="#e37383" strokeType="INSIDE" />
@@ -42,35 +42,30 @@
       <Circle fill="#f8c8dc" layoutX="126.0" layoutY="342.0" opacity="0.4" radius="20.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="32.0" layoutY="388.0" opacity="0.4" radius="20.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="90.0" layoutY="362.0" opacity="0.4" radius="26.0" stroke="#e37383" strokeType="INSIDE" />
-      <ImageView fitHeight="119.0" fitWidth="100.0" layoutX="417.0" layoutY="154.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../../VS%20Code%20Projects/Test2/src/image/anya.png" />
-         </image>
-      </ImageView>
-      <Label layoutX="62.0" layoutY="230.0" text="Username: " textFill="#ab3363">
+      <Label layoutX="102.0" layoutY="276.0" prefHeight="30.0" prefWidth="76.0" text="Enter:" textFill="#ab3363">
          <font>
             <Font name="Arial Rounded MT Bold" size="23.0" />
          </font>
       </Label>
-      <TextField fx:id="mytextfield" layoutX="198.0" layoutY="230.0" prefHeight="26.0" prefWidth="317.0" promptText="Enter your username here..." />
-      <Button fx:id="mybutton" layoutX="198.0" layoutY="308.0" mnemonicParsing="false" onAction="#enter" text="Enter" textFill="#ab3363">
+      <TextField fx:id="mytextfield" layoutX="176.0" layoutY="279.0" prefHeight="26.0" prefWidth="317.0" promptText="Enter your 4-digit code here..." />
+      <Button fx:id="mybutton" layoutX="256.0" layoutY="314.0" mnemonicParsing="false" onAction="#enter" text="Enter" textFill="#ab3363">
          <font>
             <Font size="18.0" />
          </font>
       </Button>
-      <Label fx:id="mywarninglabel" layoutX="87.0" layoutY="358.0" text="Username and Password does not match!" textFill="RED" visible="false">
+      <Label fx:id="mywarninglabel" layoutX="180.0" layoutY="358.0" text="Code does not match!" textFill="RED" visible="false">
          <font>
             <Font name="OCR A Extended" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="78.0" layoutY="169.0" prefHeight="52.0" prefWidth="293.0" text="Please sign in to order" textFill="#ab3363">
+      <Label layoutX="170.0" layoutY="127.0" prefHeight="64.0" prefWidth="228.0" text="&quot;We have sent a 4 digit" textFill="#ab3363">
          <font>
-            <Font name="Arial Rounded MT Bold" size="27.0" />
+            <Font name="Arial Rounded MT Bold" size="20.0" />
          </font>
       </Label>
-      <Label layoutX="93.0" layoutY="64.0" text="Forgot Password?" textFill="#6b0829">
+      <Label layoutX="187.0" layoutY="44.0" text="Forgot" textFill="#6b0829">
          <font>
-            <Font name="Avenir Book" size="40.0" />
+            <Font name="OCR A Extended" size="40.0" />
          </font>
       </Label>
       <Circle fill="#f8c8dc" layoutX="535.0" layoutY="374.0" opacity="0.4" radius="32.0" stroke="#e37383" strokeType="INSIDE" />
@@ -94,5 +89,30 @@
       <Circle fill="#f8c8dc" layoutX="467.0" layoutY="93.0" opacity="0.4" radius="32.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="487.0" layoutY="148.0" opacity="0.4" radius="20.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="505.0" layoutY="172.0" opacity="0.4" radius="23.0" stroke="#e37383" strokeType="INSIDE" />
+      <ImageView fitHeight="95.0" fitWidth="95.0" layoutX="377.0" layoutY="197.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/anya1.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="123.0" layoutY="158.0" prefHeight="64.0" prefWidth="211.0" text="code to your number:" textFill="#ab3363">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="66.0" layoutY="190.0" prefHeight="64.0" prefWidth="462.0" text="Please enter the 4 digit code before it expires." textFill="#ab3363">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="335.0" layoutY="158.0" prefHeight="64.0" prefWidth="140.0" text="+639510**** &quot;" textFill="#ab3363" underline="true">
+         <font>
+            <Font name="Arial Rounded MT Bold" size="20.0" />
+         </font>
+      </Label>
+      <Label layoutX="309.0" layoutY="83.0" text="Password?" textFill="#6b0829">
+         <font>
+            <Font name="OCR A Extended" size="40.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
