--- a/Updated Version/View/ForgotPassword.fxml
+++ b/Updated Version/View/ForgotPassword.fxml
@@ -58,7 +58,7 @@
             <Font name="OCR A Extended" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="170.0" layoutY="127.0" prefHeight="64.0" prefWidth="228.0" text="&quot;We have sent a 4 digit" textFill="#ab3363">
+      <Label layoutX="170.0" layoutY="127.0" prefHeight="64.0" prefWidth="228.0" text="&quot;We sent a 4 digit" textFill="#ab3363">
          <font>
             <Font name="Arial Rounded MT Bold" size="20.0" />
          </font>
