--- a/Updated Version/View/ForgotPassword.fxml
+++ b/Updated Version/View/ForgotPassword.fxml
@@ -23,7 +23,7 @@
             <Image url="@../image/gradient.jpg" />
          </image>
       </ImageView>
-      <ImageView fitHeight="168.0" fitWidth="172.0" layoutX="18.0" layoutY="9.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="193.0" fitWidth="177.0" layoutX="14.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../image/logo.png" />
          </image>
@@ -58,7 +58,7 @@
             <Font name="OCR A Extended" size="18.0" />
          </font>
       </Label>
-      <Label layoutX="170.0" layoutY="127.0" prefHeight="64.0" prefWidth="228.0" text="&quot;We sent a 4 digit" textFill="#ab3363">
+      <Label layoutX="183.0" layoutY="127.0" prefHeight="64.0" prefWidth="228.0" text="&quot;We sent a 4 digit code" textFill="#ab3363">
          <font>
             <Font name="Arial Rounded MT Bold" size="20.0" />
          </font>
@@ -94,7 +94,7 @@
             <Image url="@../image/anya1.png" />
          </image>
       </ImageView>
-      <Label layoutX="123.0" layoutY="158.0" prefHeight="64.0" prefWidth="211.0" text="code to your number:" textFill="#ab3363">
+      <Label layoutX="146.0" layoutY="158.0" prefHeight="64.0" prefWidth="211.0" text="to your number:" textFill="#ab3363">
          <font>
             <Font name="Arial Rounded MT Bold" size="20.0" />
          </font>
@@ -104,7 +104,7 @@
             <Font name="Arial Rounded MT Bold" size="20.0" />
          </font>
       </Label>
-      <Label layoutX="335.0" layoutY="158.0" prefHeight="64.0" prefWidth="140.0" text="+639510**** &quot;" textFill="#ab3363" underline="true">
+      <Label layoutX="307.0" layoutY="158.0" prefHeight="64.0" prefWidth="140.0" text="+639510**** &quot;" textFill="#ab3363" underline="true">
          <font>
             <Font name="Arial Rounded MT Bold" size="20.0" />
          </font>
