--- a/Updated Version/View/Login.fxml
+++ b/Updated Version/View/Login.fxml
@@ -14,14 +14,9 @@
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="408.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
    <children>
-      <ImageView fitHeight="379.0" fitWidth="636.0" layoutX="-12.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="414.0" fitWidth="739.0" layoutX="-167.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../image/gradient.jpg" />
-         </image>
-      </ImageView>
-      <ImageView fitHeight="379.0" fitWidth="559.0" layoutX="6.0" layoutY="37.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@../image/gradient.jpg" />
+            <Image url="@../image/bg.gif" />
          </image>
       </ImageView>
       <ImageView fitHeight="170.0" fitWidth="170.0" layoutX="13.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
@@ -86,10 +81,10 @@
          </font>
       </Label>
       <Circle fill="#f8c8dc" layoutX="535.0" layoutY="374.0" opacity="0.4" radius="32.0" stroke="#e37383" strokeType="INSIDE" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="414.0" layoutY="-6.0" stroke="LIGHTPINK" strokeType="INSIDE" width="16.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="16.0" layoutX="-6.0" layoutY="398.0" stroke="LIGHTPINK" strokeType="INSIDE" width="576.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="414.0" layoutX="554.0" layoutY="-4.0" stroke="LIGHTPINK" strokeType="INSIDE" width="16.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="16.0" layoutX="-3.0" stroke="LIGHTPINK" strokeType="INSIDE" width="570.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="414.0" layoutY="-6.0" stroke="LIGHTPINK" strokeType="INSIDE" style="-fx-fill: transparent;" width="16.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="16.0" layoutX="-6.0" layoutY="398.0" stroke="LIGHTPINK" strokeType="INSIDE" style="-fx-fill: transparent;" width="576.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="390.0" layoutX="554.0" layoutY="-4.0" stroke="LIGHTPINK" strokeType="INSIDE" style="-fx-fill: transparent;" width="1.0" />
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="16.0" layoutX="-3.0" stroke="LIGHTPINK" strokeType="INSIDE" style="-fx-fill: transparent;" width="570.0" />
       <Line endX="428.615234375" layoutX="123.0" layoutY="398.0" startX="-105.84927368164062" />
       <Line endX="428.615234375" layoutX="123.0" layoutY="17.0" startX="-105.84927368164062" />
       <Line endX="2.0" endY="284.29290771484375" layoutX="552.0" layoutY="112.0" startX="2.0" startY="-93.46446228027344" />
