--- a/Updated Version/View/Home.fxml
+++ b/Updated Version/View/Home.fxml
@@ -10,19 +10,18 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="720.0" prefWidth="1234.0" style="-fx-background-color: pink;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.HomeController">
    <children>
       <ImageView fitHeight="720.0" fitWidth="1234.0" layoutX="1.0">
          <image>
-            <Image url="@../image/gradient.jpg" />
+            <Image url="@../image/bg.gif" />
          </image>
       </ImageView>
       <Pane layoutX="31.0" layoutY="30.0" prefHeight="301.0" prefWidth="337.0" style="-fx-background-color: beige;">
          <children>
             <ImageView fitHeight="295.0" fitWidth="328.0" layoutX="5.0" layoutY="4.0">
                <image>
-                  <Image url="@../image/blue.jpg" />
+                  <Image url="@../image/star.gif" />
                </image>
             </ImageView>
             <Label fx:id="name1" layoutX="187.0" layoutY="94.0" text="Hot Chocolate">
@@ -38,6 +37,11 @@
             <ImageView fx:id="img1" fitHeight="221.0" fitWidth="157.0" layoutX="14.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../image/hotchoco.jpg" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="221.0" fitWidth="158.0" layoutX="172.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/anya2.png" />
                </image>
             </ImageView>
             <Button fx:id="button1" layoutX="47.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #FFB6C1;" text="Add to Cart" textFill="#ab3363">
@@ -60,7 +64,7 @@
          <children>
             <ImageView fitHeight="301.0" fitWidth="342.0" layoutX="-4.0" layoutY="3.0">
                <image>
-                  <Image url="@../image/blue.jpg" />
+                  <Image url="@../image/star.gif" />
                </image>
             </ImageView>
             <Label fx:id="name11" layoutX="187.0" layoutY="94.0" text="Hot Chocolate">
@@ -87,13 +91,18 @@
             <Line endX="354.0" endY="-20.0" layoutX="-17.0" layoutY="20.0" startX="17.0" startY="-20.0" stroke="GOLDENROD" strokeWidth="10.0" />
             <Line endX="356.0" endY="-20.0" layoutX="-17.0" layoutY="321.0" startX="17.0" startY="-20.0" stroke="GOLDENROD" strokeWidth="10.0" />
             <Line endX="247.0" endY="115.0" layoutX="92.0" layoutY="181.0" startX="247.0" startY="-181.0" stroke="GOLDENROD" strokeWidth="10.0" />
+            <ImageView fitHeight="221.0" fitWidth="158.0" layoutX="172.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/anya2.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
       <Pane layoutX="867.0" layoutY="30.0" prefHeight="301.0" prefWidth="337.0" style="-fx-background-color: beige;">
          <children>
             <ImageView fitHeight="301.0" fitWidth="342.0">
                <image>
-                  <Image url="@../image/blue.jpg" />
+                  <Image url="@../image/star.gif" />
                </image>
             </ImageView>
             <Label fx:id="name111" layoutX="187.0" layoutY="94.0" text="Hot Chocolate">
@@ -111,6 +120,11 @@
                   <Image url="@../image/strawberry.jpg" />
                </image>
             </ImageView>
+            <ImageView fitHeight="221.0" fitWidth="158.0" layoutX="172.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/anya2.png" />
+               </image>
+            </ImageView>
             <Button fx:id="button111" layoutX="47.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #FFB6C1;" text="Add to Cart" textFill="#ab3363">
                <font>
                   <Font name="System Bold" size="14.0" />
@@ -126,7 +140,7 @@
          <children>
             <ImageView fitHeight="301.0" fitWidth="328.0" layoutX="5.0">
                <image>
-                  <Image url="@../image/blue.jpg" />
+                  <Image url="@../image/star.gif" />
                </image>
             </ImageView>
             <Label fx:id="name2" layoutX="187.0" layoutY="94.0" text="Hot Chocolate">
@@ -141,7 +155,7 @@
             </Label>
             <ImageView fx:id="img2" fitHeight="221.0" fitWidth="157.0" layoutX="14.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@fruittea.jpg" />
+                  <Image url="@../image/fruittea.jpg" />
                </image>
             </ImageView>
             <Button fx:id="button12" layoutX="47.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #ADD8E6;" text="Add to Cart" textFill="#ab3363">
@@ -153,13 +167,18 @@
             <Line endX="317.0" endY="-121.0" layoutX="20.0" layoutY="121.0" startX="-20.0" startY="-121.0" stroke="GOLDENROD" strokeWidth="10.0" />
             <Line endX="327.0" endY="-118.0" layoutX="10.0" layoutY="419.0" startX="327.0" startY="-409.0" stroke="GOLDENROD" strokeWidth="10.0" />
             <Line endX="297.0" endY="-112.0" layoutX="39.0" layoutY="413.0" startX="-34.0" startY="-112.0" stroke="GOLDENROD" strokeWidth="10.0" />
+            <ImageView fitHeight="221.0" fitWidth="158.0" layoutX="172.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/anya2.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
       <Pane layoutX="449.0" layoutY="391.0" prefHeight="301.0" prefWidth="337.0" style="-fx-background-color: beige;">
          <children>
             <ImageView fitHeight="301.0" fitWidth="337.0" layoutX="-3.0">
                <image>
-                  <Image url="@../image/blue.jpg" />
+                  <Image url="@../image/star.gif" />
                </image>
             </ImageView>
             <Label fx:id="name22" layoutX="187.0" layoutY="94.0" text="Hot Chocolate">
@@ -174,7 +193,7 @@
             </Label>
             <ImageView fx:id="img22" fitHeight="221.0" fitWidth="157.0" layoutX="14.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@caramelfrappe.jpg" />
+                  <Image url="@../image/caramelfrappe.jpg" />
                </image>
             </ImageView>
             <Button fx:id="button121" layoutX="47.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #FFB6C1;" text="Add to Cart" textFill="#ab3363">
@@ -186,13 +205,18 @@
             <Line endX="317.0" endY="-121.0" layoutX="20.0" layoutY="422.0" startX="-20.0" startY="-121.0" stroke="GOLDENROD" strokeWidth="10.0" />
             <Line endX="327.0" endY="-108.0" layoutX="-327.0" layoutY="409.0" startX="327.0" startY="-409.0" stroke="GOLDENROD" strokeWidth="10.0" />
             <Line endX="317.0" endY="-121.0" layoutX="20.0" layoutY="121.0" startX="-20.0" startY="-121.0" stroke="GOLDENROD" strokeWidth="10.0" />
+            <ImageView fitHeight="221.0" fitWidth="158.0" layoutX="172.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/anya2.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
       <Pane layoutX="867.0" layoutY="391.0" prefHeight="301.0" prefWidth="337.0" style="-fx-background-color: beige;">
          <children>
             <ImageView fitHeight="301.0" fitWidth="337.0">
                <image>
-                  <Image url="@../image/blue.jpg" />
+                  <Image url="@../image/star.gif" />
                </image>
             </ImageView>
             <Label fx:id="name222" layoutX="187.0" layoutY="94.0" text="Hot Chocolate">
@@ -207,7 +231,7 @@
             </Label>
             <ImageView fx:id="img222" fitHeight="221.0" fitWidth="157.0" layoutX="14.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@matchalatte.jpg" />
+                  <Image url="@../image/matchalatte.jpg" />
                </image>
             </ImageView>
             <Button fx:id="button1211" layoutX="47.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #ADD8E6;" text="Add to Cart" textFill="#ab3363">
@@ -219,6 +243,11 @@
             <Line endX="463.0" endY="-439.0" layoutX="-128.0" layoutY="439.0" startX="128.0" startY="-439.0" stroke="GOLDENROD" strokeWidth="10.0" />
             <Line endX="118.0" endY="-149.0" layoutX="-118.0" layoutY="449.0" startX="118.0" startY="-449.0" stroke="GOLDENROD" strokeWidth="10.0" />
             <Line endX="440.0" endY="-158.0" layoutX="-108.0" layoutY="459.0" startX="108.0" startY="-158.0" stroke="GOLDENROD" strokeWidth="10.0" />
+            <ImageView fitHeight="221.0" fitWidth="158.0" layoutX="172.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/anya2.png" />
+               </image>
+            </ImageView>
          </children>
       </Pane>
       <Circle fill="DODGERBLUE" layoutX="25.0" layoutY="2.0" radius="11.0" stroke="#e37383" strokeType="INSIDE" style="-fx-fill: transparent;" />
@@ -401,3 +430,4 @@
       <Circle fill="DODGERBLUE" layoutX="1230.0" layoutY="720.0" radius="15.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" style="-fx-fill: #F33A6A;" />
    </children>
 </AnchorPane>
+
