--- a/Updated Version/View/Login.fxml
+++ b/Updated Version/View/Login.fxml
@@ -9,17 +9,16 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Circle?>
 <?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="408.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.LoginController">
    <children>
-      <ImageView fitHeight="414.0" fitWidth="739.0" layoutX="-167.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="592.0" fitWidth="576.0" layoutX="-6.0" layoutY="-162.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../image/bg.gif" />
+            <Image url="@../image/bg1.gif" />
          </image>
       </ImageView>
-      <ImageView fitHeight="170.0" fitWidth="170.0" layoutX="13.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="193.0" fitWidth="177.0" layoutX="14.0" layoutY="17.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../image/logo.png" />
          </image>
@@ -38,67 +37,68 @@
       <Circle fill="#f8c8dc" layoutX="126.0" layoutY="342.0" opacity="0.4" radius="20.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="32.0" layoutY="388.0" opacity="0.4" radius="20.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="90.0" layoutY="362.0" opacity="0.4" radius="26.0" stroke="#e37383" strokeType="INSIDE" />
-      <ImageView fitHeight="119.0" fitWidth="100.0" layoutX="417.0" layoutY="145.0" pickOnBounds="true" preserveRatio="true">
+      <Circle fill="#f8c8dc" layoutX="473.0" layoutY="368.0" opacity="0.4" radius="15.0" stroke="#e37383" strokeType="INSIDE" />
+      <ImageView fitHeight="145.0" fitWidth="145.0" layoutX="378.0" layoutY="131.0" pickOnBounds="true" preserveRatio="true">
          <image>
             <Image url="@../image/anya.png" />
          </image>
       </ImageView>
-      <Label layoutX="72.0" layoutY="223.0" text="Username: " textFill="#ab3363">
+      <Label layoutX="82.0" layoutY="236.0" prefHeight="36.0" prefWidth="108.0" text="Username: " textFill="#ab3363">
          <font>
-            <Font name="Arial Rounded MT Bold" size="23.0" />
+            <Font name="Baskerville Old Face" size="23.0" />
          </font>
       </Label>
-      <Label layoutX="74.0" layoutY="254.0" text="Password: " textFill="#ab3363">
+      <Label layoutX="92.0" layoutY="273.0" text="Password: " textFill="#ab3363">
          <font>
-            <Font name="Arial Rounded MT Bold" size="23.0" />
+            <Font name="Baskerville Old Face" size="23.0" />
          </font>
       </Label>
-      <TextField fx:id="mytextfield" layoutX="198.0" layoutY="223.0" prefHeight="26.0" prefWidth="317.0" promptText="Enter your username here..." />
-      <PasswordField fx:id="mypasswordfield" layoutX="198.0" layoutY="254.0" prefHeight="26.0" prefWidth="317.0" promptText="Enter your password here..." />
-      <Button fx:id="mybutton" layoutX="318.0" layoutY="300.0" mnemonicParsing="false" onAction="#login" text="LOGIN" textFill="#ab3363">
+      <TextField fx:id="mytextfield" layoutX="198.0" layoutY="241.0" prefHeight="26.0" prefWidth="317.0" promptText="Enter your username here..." />
+      <PasswordField fx:id="mypasswordfield" layoutX="198.0" layoutY="274.0" prefHeight="26.0" prefWidth="317.0" promptText="Enter your password here..." />
+      <Button fx:id="mybutton" layoutX="318.0" layoutY="309.0" mnemonicParsing="false" onAction="#login" text="LOGIN" textFill="#ab3363">
          <font>
             <Font name="Agency FB" size="24.0" />
          </font>
       </Button>
-      <Button fx:id="mybutton1" layoutX="157.0" layoutY="300.0" mnemonicParsing="false" onAction="#forgotpassword" prefHeight="44.0" prefWidth="135.0" style="-fx-background-color: transparent;" text="Forgot Password?" textFill="#ab3363" underline="true">
+      <Button fx:id="mybutton1" layoutX="151.0" layoutY="310.0" mnemonicParsing="false" onAction="#forgotpassword" prefHeight="44.0" prefWidth="135.0" style="-fx-background-color: transparent;" text="Forgot Password?" textFill="#ab3363" underline="true">
          <font>
             <Font name="Agency FB" size="19.0" />
          </font>
       </Button>
-      <Label fx:id="mywarninglabel" layoutX="98.0" layoutY="358.0" text="Username and Password does not match!" textFill="RED" visible="false">
+      <Label fx:id="mywarninglabel" layoutX="124.0" layoutY="360.0" text="Username and Password does not match!" textFill="RED" visible="false">
          <font>
-            <Font name="OCR A Extended" size="18.0" />
+            <Font name="OCR A Extended" size="15.0" />
          </font>
       </Label>
-      <Label layoutX="78.0" layoutY="159.0" prefHeight="52.0" prefWidth="293.0" text="Please sign in to order" textFill="#ab3363">
+      <Label layoutX="106.0" layoutY="178.0" prefHeight="52.0" prefWidth="293.0" text="Please sign in to order" textFill="#ab3363">
          <font>
-            <Font name="Arial Rounded MT Bold" size="27.0" />
+            <Font name="Baskerville Old Face" size="31.0" />
          </font>
       </Label>
-      <Label layoutX="175.0" layoutY="51.0" text="Kuromi's Coffee" textFill="#6b0829">
+      <Label layoutX="175.0" layoutY="59.0" text="Kuromi's Coffee" textFill="#6b0829">
          <font>
             <Font name="OCR A Extended" size="40.0" />
          </font>
       </Label>
       <Circle fill="#f8c8dc" layoutX="535.0" layoutY="374.0" opacity="0.4" radius="32.0" stroke="#e37383" strokeType="INSIDE" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="414.0" layoutY="-6.0" stroke="LIGHTPINK" strokeType="INSIDE" style="-fx-fill: transparent;" width="16.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="16.0" layoutX="-6.0" layoutY="398.0" stroke="LIGHTPINK" strokeType="INSIDE" style="-fx-fill: transparent;" width="576.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="390.0" layoutX="554.0" layoutY="-4.0" stroke="LIGHTPINK" strokeType="INSIDE" style="-fx-fill: transparent;" width="1.0" />
-      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="LIGHTPINK" height="16.0" layoutX="-3.0" stroke="LIGHTPINK" strokeType="INSIDE" style="-fx-fill: transparent;" width="570.0" />
-      <Line endX="428.615234375" layoutX="123.0" layoutY="398.0" startX="-105.84927368164062" />
-      <Line endX="428.615234375" layoutX="123.0" layoutY="17.0" startX="-105.84927368164062" />
-      <Line endX="2.0" endY="284.29290771484375" layoutX="552.0" layoutY="112.0" startX="2.0" startY="-93.46446228027344" />
-      <Line endX="2.0" endY="284.29290771484375" layoutX="14.0" layoutY="113.0" startX="2.0" startY="-93.46446228027344" />
-      <Line endX="-175.34927368164062" endY="-14.5" layoutX="192.0" layoutY="32.0" startX="-201.84925842285156" startY="-37.70709228515625" stroke="#7c5454" strokeWidth="5.0" />
-      <Line endX="129.0" endY="-38.0" layoutX="441.0" layoutY="38.0" startX="112.5" startY="-19.9644775390625" stroke="#7c5454" strokeWidth="5.0" />
-      <Line endX="-47.0" endY="44.0" layoutX="63.0" layoutY="354.0" startX="-71.313720703125" startY="66.17156982421875" stroke="#7c5454" strokeWidth="5.0" />
-      <Line endX="-32.8492431640625" endY="35.29290771484375" layoutX="603.0" layoutY="380.0" startX="-50.0" startY="17.0" stroke="#7c5454" strokeWidth="5.0" />
-      <Label layoutX="299.0" layoutY="95.0" text="Shop" textFill="#6b0829">
+      <Line endX="428.615234375" layoutX="123.0" layoutY="398.0" startX="-105.84927368164062" stroke="#ff82f3" strokeWidth="6.0" />
+      <Line endX="428.615234375" layoutX="120.0" layoutY="14.0" startX="-105.84927368164062" stroke="#ff82f3" strokeWidth="6.0" />
+      <Line endX="2.0" endY="284.29290771484375" layoutX="554.0" layoutY="112.0" startX="2.0" startY="-93.46446228027344" stroke="#ff82f3" strokeWidth="6.0" />
+      <Line endX="2.0" endY="284.29290771484375" layoutX="14.0" layoutY="113.0" startX="2.0" startY="-93.46446228027344" stroke="#ff82f3" strokeWidth="6.0" />
+      <Line endX="-175.34927368164062" endY="-14.5" layoutX="192.0" layoutY="32.0" startX="-201.84925842285156" startY="-37.70709228515625" stroke="#ff82f3" strokeWidth="5.0" />
+      <Line endX="129.0" endY="-38.0" layoutX="441.0" layoutY="38.0" startX="112.5" startY="-19.9644775390625" stroke="#ff82f3" strokeWidth="5.0" />
+      <Line endX="-48.8492431640625" endY="44.0" layoutX="63.0" layoutY="354.0" startX="-73.1507568359375" startY="70.0" stroke="#ff82f3" strokeWidth="5.0" />
+      <Line endX="-31.0" endY="36.0" layoutX="601.0" layoutY="378.0" startX="-45.0" startY="21.29290771484375" stroke="#ff82f3" strokeWidth="5.0" />
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="10.0" layoutY="-3.0" opacity="0.4" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <Label layoutX="299.0" layoutY="109.0" text="Shop" textFill="#6b0829">
          <font>
             <Font name="OCR A Extended" size="40.0" />
          </font>
       </Label>
-      <Circle fill="#f8c8dc" layoutX="473.0" layoutY="368.0" opacity="0.4" radius="15.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="46.0" layoutY="73.0" opacity="0.4" radius="20.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="155.0" layoutY="49.0" opacity="0.4" radius="32.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="441.0" layoutY="128.0" opacity="0.4" radius="23.0" stroke="#e37383" strokeType="INSIDE" />
@@ -106,5 +106,70 @@
       <Circle fill="#f8c8dc" layoutX="467.0" layoutY="93.0" opacity="0.4" radius="32.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="487.0" layoutY="148.0" opacity="0.4" radius="20.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="505.0" layoutY="172.0" opacity="0.4" radius="23.0" stroke="#e37383" strokeType="INSIDE" />
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="146.0" layoutY="-3.0" opacity="0.4" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="292.0" layoutY="-3.0" opacity="0.4" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="427.0" layoutY="-3.0" opacity="0.4" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="495.0" layoutY="72.0" opacity="0.4" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="495.0" layoutY="195.0" opacity="0.4" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="493.0" layoutY="327.0" opacity="0.4" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="410.0" layoutY="397.0" opacity="0.4" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="275.0" layoutY="397.0" opacity="0.4" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="137.0" layoutY="397.0" opacity="0.4" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="6.0" layoutY="397.0" opacity="0.4" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="-66.0" layoutY="323.0" opacity="0.4" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="-66.0" layoutY="199.0" opacity="0.4" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="20.0" fitWidth="145.0" layoutX="-66.0" layoutY="64.0" opacity="0.4" pickOnBounds="true" preserveRatio="true" rotate="90.0">
+         <image>
+            <Image url="@../image/divider.gif" />
+         </image>
+      </ImageView>
    </children>
 </AnchorPane>
