--- a/Updated Version/View/ForgotPassword.fxml
+++ b/Updated Version/View/ForgotPassword.fxml
@@ -84,9 +84,9 @@
       <Circle fill="#f8c8dc" layoutX="467.0" layoutY="93.0" opacity="0.4" radius="32.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="487.0" layoutY="148.0" opacity="0.4" radius="20.0" stroke="#e37383" strokeType="INSIDE" />
       <Circle fill="#f8c8dc" layoutX="505.0" layoutY="172.0" opacity="0.4" radius="23.0" stroke="#e37383" strokeType="INSIDE" />
-      <ImageView fitHeight="127.0" fitWidth="160.0" layoutX="313.0" layoutY="200.0" pickOnBounds="true" preserveRatio="true">
+      <ImageView fitHeight="52.0" fitWidth="66.0" layoutX="449.0" layoutY="255.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../image/anya1.png" />
+            <Image url="@../image/anya1.gif" />
          </image>
       </ImageView>
       <Label layoutX="127.0" layoutY="162.0" prefHeight="64.0" prefWidth="211.0" text="to your number:" textFill="#ab3363">
@@ -181,4 +181,3 @@
       </ImageView>
    </children>
 </AnchorPane>
-
