--- a/Updated Version/View/Home.fxml
+++ b/Updated Version/View/Home.fxml
@@ -24,14 +24,19 @@
                   <Image url="@../image/star.gif" />
                </image>
             </ImageView>
-            <Label fx:id="name1" layoutX="187.0" layoutY="94.0" text="Hot Chocolate">
+            <ImageView fitHeight="221.0" fitWidth="158.0" layoutX="172.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/anya2.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="name1" layoutX="181.0" layoutY="94.0" prefHeight="26.0" prefWidth="139.0" text="Hot Chocolate">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="Broadway" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="price1" layoutX="230.0" layoutY="147.0" text="9.99">
+            <Label fx:id="price1" layoutX="227.0" layoutY="140.0" text="9.99">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="Broadway" size="18.0" />
                </font>
             </Label>
             <ImageView fx:id="img1" fitHeight="221.0" fitWidth="157.0" layoutX="14.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
@@ -39,14 +44,9 @@
                   <Image url="@../image/hotchoco.jpg" />
                </image>
             </ImageView>
-            <ImageView fitHeight="221.0" fitWidth="158.0" layoutX="172.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../image/anya2.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="button1" layoutX="47.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #FFB6C1;" text="Add to Cart" textFill="#ab3363">
+            <Button fx:id="button1" layoutX="36.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #FFB6C1;" text="Add to Cart" textFill="#ab3363">
                <font>
-                  <Font name="System Bold" size="14.0" />
+                  <Font name="Bookman Old Style Bold Italic" size="14.0" />
                </font>
             </Button>
             <Line endY="301.0" startX="7.62939453125E-6" stroke="#b382ff" strokeWidth="10.0" />
@@ -55,9 +55,9 @@
             <Line endX="240.0" endY="-311.0" layoutX="97.0" layoutY="311.0" startX="240.0" startY="-10.0" stroke="#ff82f3" strokeWidth="10.0" />
          </children>
       </Pane>
-      <Button fx:id="cartbutton" layoutX="571.0" layoutY="340.0" mnemonicParsing="false" onAction="#gotocart" prefHeight="40.0" prefWidth="94.0" style="-fx-background-color: red;" text="My Cart" textFill="#f58ab5">
+      <Button fx:id="cartbutton" layoutX="569.0" layoutY="340.0" mnemonicParsing="false" onAction="#gotocart" prefHeight="40.0" prefWidth="104.0" style="-fx-background-color: red;" text="My Cart" textFill="#ebb3cb">
          <font>
-            <Font name="System Bold" size="18.0" />
+            <Font name="Bookman Old Style Bold" size="18.0" />
          </font>
       </Button>
       <Pane layoutX="449.0" layoutY="30.0" prefHeight="301.0" prefWidth="337.0" style="-fx-background-color: beige;">
@@ -67,14 +67,19 @@
                   <Image url="@../image/star.gif" />
                </image>
             </ImageView>
-            <Label fx:id="name11" layoutX="187.0" layoutY="94.0" text="Hot Chocolate">
+            <ImageView fitHeight="221.0" fitWidth="158.0" layoutX="172.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/anya2.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="name11" layoutX="187.0" layoutY="94.0" text="Espresso">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="Broadway" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="price11" layoutX="230.0" layoutY="147.0" text="9.99">
+            <Label fx:id="price11" layoutX="227.0" layoutY="140.0" text="9.99">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="Broadway" size="18.0" />
                </font>
             </Label>
             <ImageView fx:id="img11" fitHeight="221.0" fitWidth="157.0" layoutX="14.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
@@ -82,20 +87,15 @@
                   <Image url="@../image/espresso.jpg" />
                </image>
             </ImageView>
-            <Button fx:id="button11" layoutX="47.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #ADD8E6;" text="Add to Cart" textFill="#ab3363">
+            <Button fx:id="button11" layoutX="37.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #ADD8E6;" text="Add to Cart" textFill="#ab3363">
                <font>
-                  <Font name="System Bold" size="14.0" />
+                  <Font name="Bookman Old Style Bold Italic" size="14.0" />
                </font>
             </Button>
             <Line endX="356.0" endY="-20.0" layoutX="-17.0" layoutY="20.0" startX="17.0" startY="-20.0" stroke="#b382ff" strokeWidth="10.0" />
             <Line endY="302.0" layoutX="-1.0" layoutY="-1.0" startY="1.0" stroke="#ff82f3" strokeWidth="10.0" />
             <Line endX="247.0" endY="111.0" layoutX="92.0" layoutY="181.0" startX="247.0" startY="-176.0" stroke="#b382ff" strokeWidth="10.0" />
             <Line endX="356.0" endY="-20.0" layoutX="-17.0" layoutY="321.0" startX="17.0" startY="-20.0" stroke="#ff82f3" strokeWidth="10.0" />
-            <ImageView fitHeight="221.0" fitWidth="158.0" layoutX="172.0" layoutY="75.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../image/anya2.png" />
-               </image>
-            </ImageView>
          </children>
       </Pane>
       <Pane layoutX="867.0" layoutY="30.0" prefHeight="301.0" prefWidth="337.0" style="-fx-background-color: beige;">
@@ -105,14 +105,19 @@
                   <Image url="@../image/star.gif" />
                </image>
             </ImageView>
-            <Label fx:id="name111" layoutX="187.0" layoutY="94.0" text="Hot Chocolate">
+            <ImageView fitHeight="221.0" fitWidth="158.0" layoutX="172.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/anya2.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="name111" layoutX="187.0" layoutY="94.0" text="Smoothie">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="Broadway" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="price111" layoutX="230.0" layoutY="147.0" text="9.99">
+            <Label fx:id="price111" layoutX="230.0" layoutY="137.0" text="9.99">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="Broadway" size="18.0" />
                </font>
             </Label>
             <ImageView fx:id="img111" fitHeight="221.0" fitWidth="157.0" layoutX="14.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
@@ -120,14 +125,9 @@
                   <Image url="@../image/strawberry.jpg" />
                </image>
             </ImageView>
-            <ImageView fitHeight="221.0" fitWidth="158.0" layoutX="172.0" layoutY="80.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../image/anya2.png" />
-               </image>
-            </ImageView>
-            <Button fx:id="button111" layoutX="47.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #FFB6C1;" text="Add to Cart" textFill="#ab3363">
+            <Button fx:id="button111" layoutX="37.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #FFB6C1;" text="Add to Cart" textFill="#ab3363">
                <font>
-                  <Font name="System Bold" size="14.0" />
+                  <Font name="Bookman Old Style Bold Italic" size="14.0" />
                </font>
             </Button>
             <Line endX="383.0" endY="-163.0" layoutX="-48.0" layoutY="464.0" startX="51.0" startY="-163.0" stroke="#b382ff" strokeWidth="10.0" />
@@ -143,14 +143,14 @@
                   <Image url="@../image/star.gif" />
                </image>
             </ImageView>
-            <Label fx:id="name2" layoutX="187.0" layoutY="94.0" text="Hot Chocolate">
+            <Label fx:id="name2" layoutX="186.0" layoutY="92.0" text="Fruit Tea">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="Broadway" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="price2" layoutX="230.0" layoutY="147.0" text="9.99">
+            <Label fx:id="price2" layoutX="231.0" layoutY="140.0" text="9.99">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="Broadway" size="18.0" />
                </font>
             </Label>
             <ImageView fx:id="img2" fitHeight="221.0" fitWidth="157.0" layoutX="14.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
@@ -158,9 +158,9 @@
                   <Image url="@../image/fruittea.jpg" />
                </image>
             </ImageView>
-            <Button fx:id="button12" layoutX="47.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #ADD8E6;" text="Add to Cart" textFill="#ab3363">
+            <Button fx:id="button2" layoutX="37.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #ADD8E6;" text="Add to Cart" textFill="#ab3363">
                <font>
-                  <Font name="System Bold" size="14.0" />
+                  <Font name="Bookman Old Style Bold Italic" size="14.0" />
                </font>
             </Button>
             <Line endX="297.0" endY="-112.0" layoutX="39.0" layoutY="413.0" startX="-34.0" startY="-112.0" stroke="#ff82f3" strokeWidth="10.0" />
@@ -181,14 +181,19 @@
                   <Image url="@../image/star.gif" />
                </image>
             </ImageView>
-            <Label fx:id="name22" layoutX="187.0" layoutY="94.0" text="Hot Chocolate">
+            <ImageView fitHeight="113.0" fitWidth="141.0" layoutX="209.0" layoutY="183.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/anya3.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="name22" layoutX="184.0" layoutY="92.0" text="Caramel Frappe">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="Broadway" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="price22" layoutX="230.0" layoutY="147.0" text="9.99">
+            <Label fx:id="price22" layoutX="230.0" layoutY="137.0" text="9.99">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="Broadway" size="18.0" />
                </font>
             </Label>
             <ImageView fx:id="img22" fitHeight="221.0" fitWidth="157.0" layoutX="14.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
@@ -196,19 +201,14 @@
                   <Image url="@../image/caramelfrappe.jpg" />
                </image>
             </ImageView>
-            <Button fx:id="button121" layoutX="47.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #FFB6C1;" text="Add to Cart" textFill="#ab3363">
+            <Button fx:id="button22" layoutX="39.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #FFB6C1;" text="Add to Cart" textFill="#ab3363">
                <font>
-                  <Font name="System Bold" size="14.0" />
+                  <Font name="Bookman Old Style Bold Italic" size="14.0" />
                </font>
             </Button>
             <Line endX="317.0" endY="-121.0" layoutX="20.0" layoutY="422.0" startX="-20.0" startY="-121.0" stroke="#ff82f3" strokeWidth="10.0" />
             <Line endX="327.0" endY="-108.0" layoutX="-327.0" layoutY="409.0" startX="327.0" startY="-409.0" stroke="#b382ff" strokeWidth="10.0" />
             <Line endX="317.0" endY="-121.0" layoutX="20.0" layoutY="121.0" startX="-20.0" startY="-121.0" stroke="#b382ff" strokeWidth="10.0" />
-            <ImageView fitHeight="113.0" fitWidth="141.0" layoutX="209.0" layoutY="183.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../image/anya3.png" />
-               </image>
-            </ImageView>
             <Line endX="335.0" endY="-121.0" layoutX="7.0" layoutY="422.0" startX="335.0" startY="-422.0" stroke="#ff82f3" strokeWidth="10.0" />
          </children>
       </Pane>
@@ -219,14 +219,19 @@
                   <Image url="@../image/star.gif" />
                </image>
             </ImageView>
-            <Label fx:id="name222" layoutX="187.0" layoutY="94.0" text="Hot Chocolate">
+            <ImageView fitHeight="113.0" fitWidth="141.0" layoutX="209.0" layoutY="183.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../image/anya3.png" />
+               </image>
+            </ImageView>
+            <Label fx:id="name222" layoutX="184.0" layoutY="92.0" text="Matcha Latte">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="Broadway" size="16.0" />
                </font>
             </Label>
-            <Label fx:id="price222" layoutX="230.0" layoutY="147.0" text="9.99">
+            <Label fx:id="price222" layoutX="229.0" layoutY="140.0" text="9.99">
                <font>
-                  <Font name="System Bold" size="18.0" />
+                  <Font name="Broadway" size="18.0" />
                </font>
             </Label>
             <ImageView fx:id="img222" fitHeight="221.0" fitWidth="157.0" layoutX="14.0" layoutY="10.0" pickOnBounds="true" preserveRatio="true">
@@ -234,20 +239,15 @@
                   <Image url="@../image/matchalatte.jpg" />
                </image>
             </ImageView>
-            <Button fx:id="button1211" layoutX="47.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #ADD8E6;" text="Add to Cart" textFill="#ab3363">
+            <Button fx:id="button222" layoutX="37.0" layoutY="250.0" mnemonicParsing="false" onAction="#buy" style="-fx-background-color: #ADD8E6;" text="Add to Cart" textFill="#ab3363">
                <font>
-                  <Font name="System Bold" size="14.0" />
+                  <Font name="Bookman Old Style Bold Italic" size="14.0" />
                </font>
             </Button>
             <Line endX="463.0" endY="-439.0" layoutX="-128.0" layoutY="439.0" startX="128.0" startY="-439.0" stroke="#ff82f3" strokeWidth="10.0" />
             <Line endX="118.0" endY="-149.0" layoutX="-118.0" layoutY="449.0" startX="118.0" startY="-449.0" stroke="#b382ff" strokeWidth="10.0" />
             <Line endX="440.0" endY="-158.0" layoutX="-108.0" layoutY="459.0" startX="108.0" startY="-158.0" stroke="#b382ff" strokeWidth="10.0" />
             <Line endX="325.0" endY="-128.0" layoutX="17.0" layoutY="429.0" startX="325.0" startY="-429.0" stroke="#ff82f3" strokeWidth="10.0" />
-            <ImageView fitHeight="113.0" fitWidth="141.0" layoutX="209.0" layoutY="183.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@../image/anya3.png" />
-               </image>
-            </ImageView>
          </children>
       </Pane>
       <Circle fill="DODGERBLUE" layoutX="25.0" layoutY="2.0" radius="11.0" stroke="#00dfff" strokeType="INSIDE" strokeWidth="2.0" style="-fx-fill: transparent;" />
